compile main css

--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -3,7 +3,7 @@
 @import
   'utility/variables',
   'utility/typography',
-  'utility/typography';
+  'utility/global-style';
 
 @import
   'components/footer';
