--- a/sass/utility/_global-style.scss
+++ b/sass/utility/_global-style.scss
@@ -19,8 +19,8 @@
 
 body {
   background: #fff;
-  color: #444;
-  font-family: "Open Sans", sans-serif;
+  color: #444 !important;
+  font-family: "Open Sans", sans-serif !important;
 }
 
 a {
