--- a/sass/components/_single.scss
+++ b/sass/components/_single.scss
@@ -6,6 +6,9 @@
         font-size: 25px;
         font-weight: bold;
     }
+    h1 {
+        margin: 0px;
+    }
     .publish-date {
         span {
             color: $secondary;
@@ -15,6 +18,7 @@
     .post-featureimage {
         img {
             width: 100%;
+            height: auto;
         }
     }
     .recent-popular-post {
