--- a/sass/components/_single.scss
+++ b/sass/components/_single.scss
@@ -37,4 +37,13 @@
             font-size: 20px;
         }
     }
+    .post-content {
+        margin: 20px 0px;
+        .nav-previous, .nav-next {
+            float: left;
+            margin: 0px 10px 20px;
+            background: #ededed;
+            padding: 1px 10px;
+        }
+    }
 }
