--- a/css/style.css
+++ b/css/style.css
@@ -1332,7 +1332,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 .single-page-template .post-content .nav-previous, .single-page-template .post-content .nav-next {
   float: left;
-  margin: 0px 10px 20px;
+  margin: 0px 10px 20px 0px;
   background: #ededed;
   padding: 1px 10px;
 }
