--- a/sass/components/_single.scss
+++ b/sass/components/_single.scss
@@ -41,7 +41,7 @@
         margin: 20px 0px;
         .nav-previous, .nav-next {
             float: left;
-            margin: 0px 10px 20px;
+            margin: 0px 10px 20px 0px;
             background: #ededed;
             padding: 1px 10px;
         }
