--- a/sass/components/_blogs.scss
+++ b/sass/components/_blogs.scss
@@ -3,4 +3,26 @@
         width: 100%;
         height: auto;
     }
+    h2 {
+        font-size: 18px !important;
+        margin: 10px 0px 5px;
+    }
+}
+
+.recent-popular-post {
+    clear: both;
+    margin: 25px 0px;
+    img {
+        float: left;
+        width: 60px;
+        margin-right: 10px;
+        height: 60px;
+        border-radius: 50%;
+    }
+    p {
+        font-weight: bold;
+        color: $secondary;
+        font-size: 16px;
+        line-height: 1.5;
+    }
 }
