--- a/sass/components/_blogs.scss
+++ b/sass/components/_blogs.scss
@@ -8,7 +8,6 @@
         margin: 10px 0px 5px;
     }
 }
-
 .recent-popular-post {
     clear: both;
     margin: 25px 0px;
@@ -25,4 +24,8 @@
         font-size: 16px;
         line-height: 1.5;
     }
+}
+
+.blogpage-title {
+    margin-bottom: 20px !important;
 }
