--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -6,7 +6,8 @@
   'utility/global-style';
 
 @import
-  'components/footer',
-  'components/breadcrumbs',
   'components/blogs',
+  'components/breadcrumbs',
+  'components/client-logo-slider',
+  'components/footer',
   'components/single';
