--- a/sass/utility/_global-style.scss
+++ b/sass/utility/_global-style.scss
@@ -8,6 +8,10 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+section {
+  padding: 30px 0px;
+}
+
 .mfp-img {
     max-height: 100% !important;
 }
@@ -654,47 +658,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-left: 100px;
   margin-bottom: 0;
   line-height: 24px;
-}
-
-/* Clients Section
---------------------------------*/
-
-#clients {
-  padding: 30px 0;
-}
-
-#clients img {
-  max-width: 90%;
-  opacity: 0.6;
-  border: 2px solid $primary;
-  transition: 0.3s;
-  border-top-right-radius: 15px;
-  border-bottom-left-radius: 15px;
-  padding: 15px 0;
-}
-
-#clients img:hover {
-  opacity: 1;
-  border: 2px solid $secondary;
-}
-
-#clients .owl-nav,
-#clients .owl-dots {
-  margin-top: 5px;
-  text-align: center;
-}
-
-#clients .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd;
-}
-
-#clients .owl-dot.active {
-  background-color: #50d8af;
 }
 
 /* Our Portfolio Section
