adde new components and made style changes

--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -6,6 +6,7 @@
   'utility/global-style';
 
 @import
+  'components/banner-carouse-slider',
   'components/blogs',
   'components/breadcrumbs',
   'components/client-logo-slider',
