--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -9,6 +9,7 @@
   'components/banner-carouse-slider',
   'components/blogs',
   'components/breadcrumbs',
+  'components/counter-details',
   'components/client-logo-slider',
   'components/footer',
   'components/single';
