--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1302,6 +1302,9 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-weight: bold;
   margin: 0px;
 }
+#counter-details .icon {
+  margin: 10px 0px;
+}
 #counter-details .icon i {
   padding: 8px;
   background: #FFFFFF;
