--- a/sass/components/_counter-details.scss
+++ b/sass/components/_counter-details.scss
@@ -10,6 +10,7 @@
         margin: 0px;
     }
     .icon {
+        margin: 10px 0px;
         i {
             padding: 8px;
             background: $web-white;
