Made changes in button

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1197,19 +1197,19 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 #intro .intro-content .btn-get-started {
   background: #0c2e8a;
-  border: 2px solid #0c2e8a;
+  border: 2px solid #FFFFFF;
 }
 #intro .intro-content .btn-get-started:hover {
-  background: none;
-  color: #0c2e8a;
+  background: #017854;
+  border: 2px solid #FFFFFF;
 }
 #intro .intro-content .btn-projects {
   background: #017854;
-  border: 2px solid #50d8af;
+  border: 2px solid #FFFFFF;
 }
 #intro .intro-content .btn-projects:hover {
-  background: none;
-  color: #0a8f67;
+  background: #0c2e8a;
+  border: 2px solid #FFFFFF;
 }
 #intro #intro-carousel {
   z-index: 8;
@@ -1380,6 +1380,4 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin: 0px 10px 20px 0px;
   background: #ededed;
   padding: 1px 10px;
-}
-
-/*# sourceMappingURL=main-style.css.map */
+}/*# sourceMappingURL=main-style.css.map */
